plugins {
    id 'java'
}

group = 'com.spike.budgi'
version = '0.0.1'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'jakarta.validation:jakarta.validation-api:3.1.0-M2'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs("-XX:+EnableDynamicAgentLoading")
    testLogging {
        events = ['passed', 'skipped', 'failed']
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}
